--- a/404.html
+++ b/404.html
@@ -4,8 +4,8 @@ title: Page not found!
 
 <html>
     {% include head.html %}
-    <main>
-        <h1 class="center style=\"color:red;\"">This is not the page you are looking for!</h1>
+    <main class="pad20px-topbot">
+        <h1 class="center" style="color:red;">This is not the page you are looking for!</h1>
         <p class="center">This page may have been moved, or not existed at all.</p>
         <p class="center"><a href="/">Home</a></p>
     </main>
